--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_API_URL = `http://localhost:5000/`
+FLASK_API_URL = `https://flaskapp03.azurewebsites.net/`
 TWILIO_ACCOUNT_SID = "AC07346c2aab7bdb8fee500a612b9a884a"
 TWILIO_AUTH_TOKEN = "dde33a5ed42d0efc240a3772aecaf6ba"
 TWILIO_PHONE_NUMBER = "+13344630064"
