--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_API_URL = `https://flaskapp03.azurewebsites.net/`
+FLASK_API_URL = "https://flaskapp03.azurewebsites.net/"
 TWILIO_ACCOUNT_SID = "AC07346c2aab7bdb8fee500a612b9a884a"
-TWILIO_AUTH_TOKEN = "dde33a5ed42d0efc240a3772aecaf6ba"
+TWILIO_AUTH_TOKEN = "3a29d23bc924916e26d409cadd0ebaf4"
 TWILIO_PHONE_NUMBER = "+13344630064"
